<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mb.locationhelpapp.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnMed"
                style="@style/button_text"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/med_button"
                android:onClick="medOnClick"
                android:text="@string/button_med" />

            <Button
                android:id="@+id/btnPol"
                style="@style/button_text"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/pol_button"
                android:onClick="polOnClick"
                android:text="@string/button_pol" />

            <Button
                android:id="@+id/btnFir"
                style="@style/button_text"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/fir_button"
                android:onClick="firOnClick"
                android:text="@string/button_fir" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnMedNext"
                style="@style/button_text"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/med_button"
                android:text=">>" />

            <Button
                android:id="@+id/btnPolNext"
                style="@style/button_text"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/pol_button"
                android:text=">>" />

            <Button
                android:id="@+id/btnFirNext"
                style="@style/button_text"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/fir_button"
                android:text=">>" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>